--- a/evcxr_jupyter/Cargo.toml
+++ b/evcxr_jupyter/Cargo.toml
@@ -24,6 +24,14 @@ colored = "1.8.0"
 dirs = "2.0.2"
 chrono = "0.4.7"
 
+clap = "2"
+log = "0.4"
+fern = "0.5"
+byteorder = "1.3"
+serde_json = "1.0"
+
+
+
 [features]
 default = ["vendored-zmq"]
 vendored-zmq = ["zmq/vendored"]
